--- a/src/container/slider/slider.module.css
+++ b/src/container/slider/slider.module.css
@@ -1,6 +1,5 @@
 .slider{
     background: url('../../assets/img/wall.jpg')  ;
-    /* background-size: cover; */
     overflow: hidden;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
 }
@@ -12,7 +11,7 @@
 }
 
 .sliderItem{
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,6 +22,7 @@
 .sliderImg{
     width: 550px;
     height: 550px;
+    /* width: 100%; */
 }
 
 .sliderBg {
@@ -67,4 +67,136 @@
 .buyBtn:hover{
     background-color: #fff;
     color: #111;
+}
+
+@media screen and (max-width:880px) {
+    .slider{
+        clip-path:url();
+    }
+
+    .sliderWrapper{
+        justify-content: center;
+        align-items: center;
+        /* background-color: red; */
+    }
+
+    .sliderImg{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+  
+    .sliderImg{
+        width: 60%;
+
+    }
+
+    .sliderBg{
+        width: 500px;
+        height: 500px;
+        right: 30%;
+    }
+    
+}
+
+
+@media screen and (max-width:700px) {
+  
+    .sliderImg{
+        width: 60%;
+        height: 60%;
+    }
+
+    .sliderBg{
+        width: 400px;
+        height: 400px;
+        right: 30%;
+    }
+    
+    .sliderTilte{
+        display: none;
+    }
+}
+
+@media screen and (max-width:580px) {
+  
+    .sliderImg{
+        width: 55%;
+        height: 55%;
+    }
+
+    .sliderBg{
+        width:300px;
+        height:300px;
+        right: 35%;
+    }
+    
+}
+
+@media screen and (max-width:490px) {
+  
+    .sliderImg{
+        width: 70%;
+        height: 70%;
+    }
+
+    .sliderBg{
+        width:300px;
+        height:300px;
+        right: 20%;
+    }
+
+    .sliderItem{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .buyBtn{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 25px;
+    }
+
+    .sliderPrice{
+        top: 0;
+        left: 0;
+        font-size: 40px;
+        background-color: lightgray;
+    }
+
+}
+
+@media screen and (max-width:360px) {
+  
+    .sliderImg{
+        width: 100%;
+        height: 100%;
+    }
+
+    .sliderBg{
+        width:250px;
+        height:250px;
+        right: 17%;
+    }
+
+    .sliderItem{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .buyBtn{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-size: 25px;
+    }
+
+    .sliderPrice{
+        top: 0;
+        left: 0;
+        font-size: 40px;
+        background-color: lightgray;
+    }
+
 }
