--- a/src/container/product/product.module.css
+++ b/src/container/product/product.module.css
@@ -2,6 +2,6 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
+    width: 100vw ;
     position: relative;
 }
